# ChangeLog for app-emacs/color-moccur
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  24 Jan 2008; Ulrich Mueller <ulm@gentoo.org>
  files/50color-moccur-gentoo.el, +color-moccur-2.41.ebuild:
  Version bump. Licence is GPL-3 now. Fix site-init file.

  28 Jun 2007; Christian Faulhammer <opfer@gentoo.org>
  +files/50color-moccur-gentoo.el, +color-moccur-2.25.ebuild, +metadata.xml:
  initial import from bug 180170, by MATSUYAMA Tomohiro
  <matsuyama@ariel-networks.com>
