@@ -1,7 +1,7 @@
 AUX 50color-moccur-gentoo.el 302 RMD160 8c226ec94220410e921fccbf4b8ebceeeea35db9 SHA1 540b381ea796c44cb9368db2f594c5cad5df5b40 SHA256 6ad66807b4766d47a73ff29a6ab1246ba096da842fce5a5ee058d864a4a89f06
-DIST color-moccur-2.25.el.bz2 20901 RMD160 c9d8c3e433601e440e3bca58c583a56cd7bae77c SHA1 61858670404ea1df1ee5d23b6e1b73151f92a32a SHA256 dda04c1e7c8bea00b0a4b89746a6af90dc00a1933b20c0a3e61664bb716cab57
 DIST color-moccur-2.41.el.bz2 21128 RMD160 0b7434762477209feea265421ff9561b65b25d62 SHA1 2c6caec65c037aec2f58bdb33c41a088e6606a0c SHA256 19dd8deac393100b9ca1c9900e57ca695a35f663b52f53896fc69d9608d529bd
-EBUILD color-moccur-2.25.ebuild 375 RMD160 a069a31940b13fb2e51e73bc398b611265263108 SHA1 b1b8a102c6319e6a15e70492e7d1af1444a0dc95 SHA256 17ebf0e15952990a9f9e133f7e9efd30776100d3e46a110093dd08eaa7989afb
+DIST color-moccur-2.42.el.bz2 21211 RMD160 f78c27927e08150461e0f9101234e271891c1852 SHA1 87e15253e7e402037993f4ba82fd9db6c3ef6e1e SHA256 509167c2820943416b85c1b2ca767c58c94fa5e68420660df277cc42a4ddf22f
 EBUILD color-moccur-2.41.ebuild 485 RMD160 27e30f387b95c3c0b9db6767fc99cda71b2ae284 SHA1 32ca991d17c31de66aace78a1aeca361ba3a982e SHA256 757d8ce4da87508317d13385c8641fcf546085899c1fd7e397a7c27fa82e93fb
-MISC ChangeLog 512 RMD160 ba0318414ee961c1b83409a3343a6b3821efd40a SHA1 70e4d46304a6279b6331b03e5d78b7f8376ccc90 SHA256 c0a814bc5bd4753e766778ebdc044ca6e3afc6ba82d79e6589d886a4dc4fc88b
+EBUILD color-moccur-2.42.ebuild 485 RMD160 27e30f387b95c3c0b9db6767fc99cda71b2ae284 SHA1 32ca991d17c31de66aace78a1aeca361ba3a982e SHA256 757d8ce4da87508317d13385c8641fcf546085899c1fd7e397a7c27fa82e93fb
+MISC ChangeLog 632 RMD160 2208958ce68ef26884d413198bbf95a471a6d176 SHA1 12253eaafd3e091f803f46f5221b374cf29fc825 SHA256 5d2099b0a0b1028dc9c7f461b194a8a866e545e52bd73914cd3b8fd1ce76738b
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
