@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  22 Feb 2008; Ulrich Mueller <ulm@gentoo.org> -color-moccur-2.25.ebuild,
+  +color-moccur-2.42.ebuild:
+  Version bump.
+
   24 Jan 2008; Ulrich Mueller <ulm@gentoo.org>
   files/50color-moccur-gentoo.el, +color-moccur-2.41.ebuild:
   Version bump. Licence is GPL-3 now. Fix site-init file.
